밑에 스크롤 공백 확보
ㅇ

--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -206,6 +206,7 @@
           <div style="grid-row: 1;"></div>
         </div>
       </div>
+      <div style="grid-row: 20;" class="scroll-end-space"></div>
     </div>
 
   <!-- Popup -->
