--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -51,12 +51,12 @@
     padding: 15px;
     padding-top: 0;
     padding-left: 0;
-    padding-bottom: 20vh;
     margin: 0 auto; /* 수평 중앙 정렬 */
     width: 100%;
     height: 64vh;
     overflow: scroll;
     -ms-overflow-style: none;
+
   }
   .timetable::-webkit-scrollbar{
     display:none;
@@ -294,9 +294,14 @@
     font-size: 0.9em;
     color: #e0e0e0;
   }
+
+  .scroll-end-space {
+    height: 20vh; /* 스크롤 끝에 60px의 여유 공간 */
+    flex-shrink: 0; /* 공간이 줄어들지 않도록 설정 */
+  }
 }
 
-
+ 
 
 
  /* ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ여기서부턴 큰화면  */
