--- a/static/css/init.css
+++ b/static/css/init.css
@@ -24,7 +24,7 @@ button {border: none;}
 * {box-sizing: border-box;}
 
 /* 반응형 */
-video,img {width: 100%;}
+/* video,img {width: 100%;} */
 
 /* clearfix */
 /* .clearfix{*zoom:1;}
@@ -34,7 +34,7 @@ video,img {width: 100%;}
 /* IR 효과 */
 .ir_pm {display:block; overflow:hidden; font-size:0; line-height:0; text-indent:-9999px;} /* 의미있는 이미지의 대체 텍스트를 제공하는 경우(Phark Method) */
 .ir_wa {display:block; overflow:hidden; position:relative; z-index:-1; width:100%; height: 100%;} /* 의미있는 이미지의 대체 텍스트로 이미지가 없어도 대체 텍스트를 보여주고자 할 때(WA IR) */
-.ir_so {overflow: hidden; position:absolute; width:0; height:0; line-height:0; text-indent:-9999px;} /* 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
+.ir_so {overflow: hidden; position:absolute; width:0; height:0; line-height:0; text-indent:-9999px;} /*대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
 
 /* 아이콘 이미지 최적화 작업 */
 /* .icon {background-image: url(../img/icon.png);} */
