--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -112,24 +112,35 @@
         },
       ];
 
-      // 마커 이미지의 이미지 주소입니다
-      var imageSrc =
-        "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
-
       for (var i = 0; i < positions.length; i++) {
-        // 마커 이미지의 이미지 크기 입니다
-        var imageSize = new kakao.maps.Size(16, 23);
-
-        // 마커 이미지를 생성합니다
-        var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize);
-
         // 마커를 생성합니다
         var marker = new kakao.maps.Marker({
           map: map, // 마커를 표시할 지도
-          position: positions[i].latlng, // 마커를 표시할 위치
-          title: positions[i].title, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
-          image: markerImage, // 마커 이미지
+          position: positions[i].latlng,
+          title: positions[i].title,
+          clickable: true, // 마커의 위치
         });
+
+        var iwContent = '<div style="padding:5px;"> asdasdas</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
+          iwRemoveable = true;
+
+        // 마커에 표시할 인포윈도우를 생성합니다
+        var infowindow = new kakao.maps.InfoWindow({
+          content: positions[i].title,
+          removable: iwRemoveable,
+        });
+
+        kakao.maps.event.addListener(
+          marker,
+          "click",
+          makeClickListener(map, marker, infowindow)
+        );
+
+        function makeClickListener(map, marker, infowindow) {
+          return function () {
+            infowindow.open(map, marker);
+          };
+        }
       }
     </script>
 
