--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -95,7 +95,7 @@
 
       var positions = [
         {
-          title: "부스1",
+          title: "BOB!/먹거리 판매 부스",
           latlng: new kakao.maps.LatLng(35.153016, 128.098656),
         },
         {
