--- a/static/css/booth/booth_list.css
+++ b/static/css/booth/booth_list.css
@@ -86,6 +86,7 @@ body {
     color: #ffffff;
   }
 
+  
   /* 지도 영역 */
   #map {
     width: 90vw;
@@ -177,7 +178,7 @@ body {
     position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
     color: #ffffff;
   }
-
+  
   /* 지도 영역 */
   #map {
     width: 90vw;
@@ -250,19 +251,7 @@ body {
   }
 }
 
-/* PIESTA LOGO */
-#logoImg {
-  position: fixed;
-  width: 60vw;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.3s ease-in-out, visibility 0s 0.3s;
-}
-.logoDate {
-  text-align: center;
-  font-family: "Pretendard-Regular";
-  color: #afafaf;
-  font-size: 2.5vw;
-  letter-spacing: 0.5vw;
+img.close-img {
+  width: auto; /* 이 이미지에만 100% 규칙을 적용하지 않음 */
+  height: auto; /* 필요에 따라 height도 설정 */
 }
