--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -222,9 +222,15 @@ body {
     margin-bottom: 2.5vh;
   }
 
-  .noticeModalBody {
+  #noticeModalBody {
     line-height: 1.6em;
     color: #6d6d6d;
+    max-height: 30vh;
+    overflow: scroll;
+  }
+    
+  #noticeModalBody::-webkit-scrollbar {
+    display: none;
   }
 
   .busModalTitle {
@@ -490,9 +496,15 @@ body {
     margin-bottom: 2.5vh;
   }
 
-  .noticeModalBody {
+  #noticeModalBody {
     line-height: 1.6em;
     color: #6d6d6d;
+    max-height: 30vh;
+    overflow: scroll;
+  }
+    
+  #noticeModalBody::-webkit-scrollbar {
+    display: none;
   }
 
   .busModalTitle {
