--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- 로고 -->
-    <div>
+    <div class="logoContainer">
       <div id="logoImg">
         <img
           src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}"
