booth_list_map 오버레이 설정

--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
       href="{{ url_for('static', path='css/booth/booth_list.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', path='css/booth/map.css') }}"
+    />
     <script
       src="{{ url_for('static', path='js/booth/booth_list.js') }}"
       defer
@@ -97,6 +101,7 @@
         {
           title: "BOB!/먹거리 판매 부스",
           latlng: new kakao.maps.LatLng(35.153016, 128.098656),
+          sub: "먹거리 먹거리"
         },
         {
           title: "부스2",
@@ -112,8 +117,19 @@
         },
       ];
 
+      // for (var i = 0; i < positions.length; i++) {
+      //   // 마커를 생성합니다
+      //   var marker = new kakao.maps.Marker({
+      //     map: map, // 마커를 표시할 지도
+      //     position: positions[i].latlng,
+      //     title: positions[i].title,
+      //     clickable: true, // 마커의 위치
+      //   });
+      var overlays = []; // 오버레이 배열
+
+      // 마커와 오버레이 생성
+      // 마커와 오버레이 생성
       for (var i = 0; i < positions.length; i++) {
-        // 마커를 생성합니다
         var marker = new kakao.maps.Marker({
           map: map, // 마커를 표시할 지도
           position: positions[i].latlng,
@@ -121,26 +137,74 @@
           clickable: true, // 마커의 위치
         });
 
-        var iwContent = '<div style="padding:5px;"> asdasdas</div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
-          iwRemoveable = true;
+        // 커스텀 오버레이에 표시할 콘텐츠
+        var content =
+          '<div class="wrap" style="display:none;">' + // 처음에 display를 none으로 설정
+          '    <div class="info">' +
+          '        <div class="title">' +
+          "            카카오 스페이스닷원" +
+          '            <div class="close" onclick="closeOverlay()" title="닫기"></div>' +
+          "        </div>" +
+          '        <div class="body">' +
+          '            <div class="img">' +
+          '                <img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/thumnail.png" width="73" height="70">' +
+          "           </div>" +
+          '            <div class="desc">' +
+          '                <div class="ellipsis">제주특별자치도 제주시 첨단로 242</div>' +
+          '                <div class="jibun ellipsis">(우) 63309 (지번) 영평동 2181</div>' +
+          '                <div><a href="https://www.kakaocorp.com/main" target="_blank" class="link">홈페이지</a></div>' +
+          "            </div>" +
+          "        </div>" +
+          "    </div>" +
+          "</div>";
 
-        // 마커에 표시할 인포윈도우를 생성합니다
-        var infowindow = new kakao.maps.InfoWindow({
-          content: positions[i].title,
-          removable: iwRemoveable,
+        // 마커 위에 커스텀 오버레이를 표시합니다
+        var overlay = new kakao.maps.CustomOverlay({
+          content: content,
+          map: map,
+          position: marker.getPosition(),
         });
 
+        overlays.push({ overlay: overlay, content: content }); // 오버레이와 콘텐츠를 배열에 저장
+
+        // 마커를 클릭했을 때 커스텀 오버레이를 표시합니다
         kakao.maps.event.addListener(
           marker,
           "click",
-          makeClickListener(map, marker, infowindow)
-        );
+          (function (overlay, content) {
+            return function () {
+              // 모든 오버레이 숨기기
+              overlays.forEach(function (item) {
+                // 현재 보이는 오버레이를 숨깁니다.
+                var updatedContent = item.content.replace(
+                  'style="display:block;"',
+                  'style="display:none;"'
+                );
+                item.overlay.setContent(updatedContent); // 오버레이의 내용을 업데이트
+                item.content = updatedContent; // 배열의 content 업데이트
+              });
 
-        function makeClickListener(map, marker, infowindow) {
-          return function () {
-            infowindow.open(map, marker);
-          };
-        }
+              // 클릭된 마커의 오버레이만 보이기
+              var updatedContent = content.replace(
+                'style="display:none;"',
+                'style="display:block;"'
+              );
+              overlay.setContent(updatedContent); // 클릭된 오버레이의 내용을 업데이트
+            };
+          })(overlay, content)
+        );
+      }
+
+      // 커스텀 오버레이를 닫기 위해 호출되는 함수입니다
+      function closeOverlay() {
+        overlays.forEach(function (item) {
+          var updatedContent = item.content.replace(
+            'style="display:block;"',
+            'style="display:none;"'
+          );
+          item.overlay.setContent(updatedContent); // 오버레이의 내용을 업데이트
+          item.content = updatedContent; // 배열의 content 업데이트
+        });
       }
     </script>
 
