--- a/static/css/booth/booth_list.css
+++ b/static/css/booth/booth_list.css
@@ -86,7 +86,6 @@ body {
     color: #ffffff;
   }
 
-  
   /* 지도 영역 */
   #map {
     width: 90vw;
@@ -157,6 +156,11 @@ body {
     margin: 0 auto;
     margin-top: 7.5vw;
   }
+  .heart {
+    position: absolute;
+    margin-left: 72vw;
+    margin-top: 2vw;
+  }
 }
 
 /* PC에서 적용되는 css -> 가로 해상도가 1025px 보다 작은 화면에 적용  */
@@ -178,7 +182,7 @@ body {
     position: relative; /* 다른 요소들과 겹치지 않게 상대 위치 */
     color: #ffffff;
   }
-  
+
   /* 지도 영역 */
   #map {
     width: 90vw;
