--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -238,6 +238,13 @@
             <p class="box-title">{{ booth.booth_name }}</p>
             <p class="box-description">{{ booth.booth_category }}</p>
           </div>
+          <div class="heart" onclick="toggleHeart()">
+            <img
+              id="heartImage"
+              src="/static/images/heart_default.png"
+              alt=""
+            />
+          </div>
         </a>
       </div>
       {% endfor %}
