--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -186,7 +186,7 @@
         <div id="campusInfo">
             <div id="busInfo1" class="busInfo">
                 <div class="mapContainer">
-                    <img class="map" src="{{ url_for('static', path='images/map_tongyeong.svg')}}" alt="" />                
+                    <img class="map" src="{{ url_for('static', path='images/map_campus1.svg')}}" alt="" />                
                 </div>
                 <div class="busInfoContainer">
                     <div>
@@ -209,7 +209,7 @@
             </div>
             <div id="busInfo2" class="busInfo">
                 <div class="mapContainer">
-                    <img class="map" src="{{ url_for('static', path='images/map_tongyeong.svg')}}" alt="" />                
+                    <img class="map" src="{{ url_for('static', path='images/map_campus3.svg')}}" alt="" />                
                 </div>
                 <div class="busInfoContainer">
                     <div>
@@ -232,7 +232,7 @@
             </div>
             <div id="busInfo3" class="busInfo">
                 <div class="mapContainer">
-                    <img class="map" src="{{ url_for('static', path='images/map_tongyeong.svg')}}" alt="" />                
+                    <img class="map" src="{{ url_for('static', path='images/map_campus2.svg')}}" alt="" />                
                 </div>
                 <div class="busInfoContainer">
                     <div>
