--- a/templates/booth/booth_detail.html
+++ b/templates/booth/booth_detail.html
@@ -92,9 +92,10 @@
           </div>
           <div class="heart" onclick="toggleHeart()">
             <img
-              id="heartImage"
+              id="heartImage_{{ booth.booth_name }}"
+              class="heart"
               src="/static/images/heart_default.png"
-              alt=""
+              alt="Heart"
             />
           </div>
         </div>
