--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -101,7 +101,7 @@
         {
           title: "BOB!/먹거리 판매 부스",
           latlng: new kakao.maps.LatLng(35.153016, 128.098656),
-          sub: "먹거리 먹거리"
+          sub: "먹거리 먹거리",
         },
         {
           title: "부스2",
@@ -117,29 +117,19 @@
         },
       ];
 
-      // for (var i = 0; i < positions.length; i++) {
-      //   // 마커를 생성합니다
-      //   var marker = new kakao.maps.Marker({
-      //     map: map, // 마커를 표시할 지도
-      //     position: positions[i].latlng,
-      //     title: positions[i].title,
-      //     clickable: true, // 마커의 위치
-      //   });
       var overlays = []; // 오버레이 배열
 
       // 마커와 오버레이 생성
-      // 마커와 오버레이 생성
       for (var i = 0; i < positions.length; i++) {
         var marker = new kakao.maps.Marker({
-          map: map, // 마커를 표시할 지도
+          map: map,
           position: positions[i].latlng,
           title: positions[i].title,
-          clickable: true, // 마커의 위치
+          clickable: true,
         });
 
-        // 커스텀 오버레이에 표시할 콘텐츠
         var content =
-          '<div class="wrap" style="display:none;">' + // 처음에 display를 none으로 설정
+          '<div class="wrap" style="display:none;">' +
           '    <div class="info">' +
           '        <div class="title">' +
           "            카카오 스페이스닷원" +
@@ -158,52 +148,46 @@
           "    </div>" +
           "</div>";
 
-        // 마커 위에 커스텀 오버레이를 표시합니다
         var overlay = new kakao.maps.CustomOverlay({
           content: content,
           map: map,
           position: marker.getPosition(),
         });
 
-        overlays.push({ overlay: overlay, content: content }); // 오버레이와 콘텐츠를 배열에 저장
+        overlays.push({ overlay: overlay, content: content });
 
-        // 마커를 클릭했을 때 커스텀 오버레이를 표시합니다
         kakao.maps.event.addListener(
           marker,
           "click",
           (function (overlay, content) {
             return function () {
-              // 모든 오버레이 숨기기
               overlays.forEach(function (item) {
-                // 현재 보이는 오버레이를 숨깁니다.
                 var updatedContent = item.content.replace(
                   'style="display:block;"',
                   'style="display:none;"'
                 );
-                item.overlay.setContent(updatedContent); // 오버레이의 내용을 업데이트
-                item.content = updatedContent; // 배열의 content 업데이트
+                item.overlay.setContent(updatedContent);
+                item.content = updatedContent;
               });
 
-              // 클릭된 마커의 오버레이만 보이기
               var updatedContent = content.replace(
                 'style="display:none;"',
                 'style="display:block;"'
               );
-              overlay.setContent(updatedContent); // 클릭된 오버레이의 내용을 업데이트
+              overlay.setContent(updatedContent);
             };
           })(overlay, content)
         );
       }
 
-      // 커스텀 오버레이를 닫기 위해 호출되는 함수입니다
       function closeOverlay() {
         overlays.forEach(function (item) {
           var updatedContent = item.content.replace(
             'style="display:block;"',
             'style="display:none;"'
           );
-          item.overlay.setContent(updatedContent); // 오버레이의 내용을 업데이트
-          item.content = updatedContent; // 배열의 content 업데이트
+          item.overlay.setContent(updatedContent);
+          item.content = updatedContent;
         });
       }
     </script>
@@ -218,12 +202,11 @@
       <input type="radio" id="date-18" name="date" value="10.18" />
       <label for="date-18">10.18</label>
     </div>
-
     <div class="box-container" id="booth-list">
       {% for booth in booths %}
       <div
         class="box"
-        data-date="{% if booth.is_operating_on_16th %}10.16{% endif %}{% if booth.is_operating_on_17th %}10.17{% endif %}{% if booth.is_operating_on_18th %}10.18{% endif %}"
+        data-date="{% if booth.is_operating_on_16th %}10.16 {% endif %}{% if booth.is_operating_on_17th %}10.17 {% endif %}{% if booth.is_operating_on_18th %}10.18 {% endif %}"
       >
         <a
           href="{{ url_for('get_booth_detail', booth_name=booth.booth_name | urlencode) }}"
@@ -231,21 +214,23 @@
           <div class="box-icon">
             <i
               class="{% if booth.booth_category == '먹거리 판매 부스' %}fa-solid fa-utensils {% elif booth.booth_category == '플리마켓 부스' %}fa-solid fa-shop {% elif booth.booth_category == '체험 부스' %}fa-solid fa-gamepad {% elif booth.booth_category == '홍보 부스' %}fa-solid fa-bullhorn {% elif booth.booth_category == '잡화 판매 부스' %}fa-solid fa-gift {% else %}fa-solid fa-question{% endif %}"
-            >
-            </i>
+            ></i>
           </div>
           <div class="box-content">
             <p class="box-title">{{ booth.booth_name }}</p>
             <p class="box-description">{{ booth.booth_category }}</p>
           </div>
-          <div class="heart" onclick="toggleHeart()">
-            <img
-              id="heartImage"
-              src="/static/images/heart_default.png"
-              alt=""
-            />
-          </div>
         </a>
+        <div
+          class="heart"
+          onclick="toggleHeart('{{ booth.booth_name | urlencode }}')"
+        >
+          <img
+            id="heartImage_{{ booth.booth_name | urlencode }}"
+            src="/static/images/heart_default.png"
+            alt=""
+          />
+        </div>
       </div>
       {% endfor %}
     </div>
