--- a/static/css/faq/faq.css
+++ b/static/css/faq/faq.css
@@ -1,14 +1,26 @@
 body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to bottom, #3b2862, #2c2f74, #cbbce3);
-    color: white;
+    color: #cbbce3;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    min-height: 100vh; /* 높이 대신 min-height를 사용하여 동적 성장을 허용 */
+    min-height: 100vh; /* 최소 높이를 100vh로 설정 */
     padding-top: 40px;
     overflow-x: hidden; /* 가로 스크롤 방지 */
-    overflow-y: auto; /* 내용이 넘칠 경우 세로 스크롤 허용 */
+    overflow-y: auto; /* 세로 스크롤 허용 */
+}
+
+#header {
+    width: 100%;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    transition: z-index 0.3s;
 }
 
 font-face {
@@ -19,14 +31,8 @@ font-face {
 }
 
 #logoImg {
-    position: fixed;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 100;
-    /* opacity: 0; */
-    /* visibility: hidden; */
-    /* transition: opacity 0.3s ease-in-out, visibility 0s 0.3s; */
+    position: relative;
+    z-index: 1;
 }
 
 .logoDate {
@@ -53,41 +59,44 @@ font-face {
         color: white;
         letter-spacing: 0.5vw;
         padding-bottom: 20px;
-        padding-top: 20px;
     }
 
     .container {
-        width: 100%; /* 전체 너비를 사용하도록 설정 */
-        max-width: 380px; /* 반응형 디자인을 위한 최대 너비 설정 */
+        width: 100%;
+        max-width: 800px;
         border-radius: 20px;
         padding: 20px;
         position: relative;
         margin-top: 20%;
-        overflow-y: auto; /* FAQ 항목이 많을 경우 세로 스크롤 허용 */
-        max-height: 80vh;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column; /* 세로 방향으로 정렬 */
+        align-items: center; /* 가로 중앙 정렬 */
+        justify-content: center; /* 세로 중앙 정렬 */
     }
 
     .faq-section {
-        margin-top: 20px;
+        position: relative; /* faq 섹션도 페이지 흐름에 따라 배치 */
+        z-index: 10; /* faq 섹션이 로고 부분을 덮을 수 있도록 z-index를 높게 설정 */
+        margin-top: 10px;
         overflow: visible;
     }
 
     .faq-item {
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         background-color: white;
-        border-radius: 20px;
+        border-radius: 15px;
         overflow: hidden;
-        transition: max-height 0.4s ease-out;
-        padding: 15px;
+        padding: 10px;
     }    
 
     .faq-question {
         width: 100%;
         background-color: white;
         border: none;
+        padding-left: 10px;
         color: #413978;
-        padding: 4px;
-        padding-top: 7px;
+        padding-top: 10px;
         cursor: pointer;
         font-size: 15px;
         text-align: left;
@@ -98,16 +107,18 @@ font-face {
         padding: 10px;
         font-size: 15px;
         padding-top: 7px;
-        display: none;
         color: #413978;
         overflow: hidden;
-        transition: max-height 0.3s ease-out; /* 부드러운 전환 효과 */
+        max-height: 0; /* 기본 상태에서 높이를 0으로 설정 */
+        opacity: 0; /* 기본 상태에서 보이지 않도록 설정 */
+        transition: max-height 0.5s ease-out, opacity 0.5s ease-out; /* 부드러운 전환 효과 */
         line-height: 1.6;
     }
     
     .faq-answer.active {
-        display: block;
-        max-height: 500px; /* 충분히 큰 높이로 설정 */
+        opacity: 1; /* 활성화된 상태에서 보이도록 설정 */
+        max-height: 1000px; /* 최대 높이를 충분히 크게 설정 */
+        overflow-y: visible; /* 내용이 많으면 스크롤을 사용할 수 있도록 설정 */
     }
 
     .faq-item.active .faq-question {
@@ -153,7 +164,6 @@ font-face {
         position: relative;
         margin-top: 20%;
         overflow-y: auto;
-        max-height: 80vh;
         display: flex;
         flex-direction: column; /* 세로 방향으로 정렬 */
         align-items: center; /* 가로 중앙 정렬 */
@@ -161,18 +171,20 @@ font-face {
     }
 
     .faq-section {
+        position: relative; /* faq 섹션도 페이지 흐름에 따라 배치 */
+        z-index: 10; /* faq 섹션이 로고 부분을 덮을 수 있도록 z-index를 높게 설정 */
         margin-top: 20px;
         overflow: visible;
     }
 
     .faq-item {
-        margin-bottom: 40px;
+        margin-bottom: 30px;
         background-color: white;
         border-radius: 20px;
         overflow: hidden;
         transition: max-height 0.4s ease-out;
         padding: 15px;
-        width: 600px;
+        width: 700px;
     }    
 
     .faq-question {
@@ -180,8 +192,8 @@ font-face {
         background-color: white;
         border: none;
         color: #413978;
-        padding: 4px;
-        padding-top: 7px;
+        padding: 7px;
+        margin-top: 14px;
         cursor: pointer;
         font-size: 30px;
         text-align: left;
@@ -192,16 +204,18 @@ font-face {
         padding: 10px;
         font-size: 30px;
         padding-top: 7px;
-        display: none;
         color: #413978;
         overflow: hidden;
-        transition: height 0.3s ease-out;
+        max-height: 0; /* 기본 상태에서 높이를 0으로 설정 */
+        opacity: 0; /* 기본 상태에서 보이지 않도록 설정 */
+        transition: max-height 0.5s ease-out, opacity 0.5s ease-out; /* 부드러운 전환 효과 */
         line-height: 1.6;
     }
 
     .faq-answer.active {
-        display: block;
-        max-height: 500px;
+        opacity: 1; /* 활성화된 상태에서 보이도록 설정 */
+        max-height: 1000px; /* 최대 높이를 충분히 크게 설정 */
+        overflow-y: visible; /* 내용이 많으면 스크롤을 사용할 수 있도록 설정 */
     }
 
     .faq-item.active .faq-question {
