--- a/templates/faq/faq.html
+++ b/templates/faq/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>faq</title>
     <link rel="stylesheet" href="{{ url_for('static', path='css/init.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', path='css/faq/faq.css') }}">
     <script src="{{ url_for('static', path='js/faq/faq.js') }}" defer></script>
@@ -16,34 +16,35 @@
 <body>
     <div class="container">
     <!-- 로고 -->
-    <div>
-        <div id="logoImg">
-            <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
-            <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
+     <header id="header">
+        <div>
+            <div id="logoImg">
+                <img src="{{ url_for('static', path='images/GNU_PIESTA_logo.svg')}}" alt="logo">
+                <p class="logoDate">2024.10.16.WED ~ 10.18.FRI</p>
+            </div>
         </div>
-    </div>
 
-    <!-- 햄버거 버튼 -->
-    <a class="menu-trigger" href="#">
-        <span class="hambergerBread"></span>
-        <span class="hambergerCenter"></span>
-        <span class="hambergerBread"></span>
-    </a>
-    <div id="hambergerContents" class="hambergerContents">
-        <div id="navContainer">
-            <div id="hrefHOME" data-url="/home">HOME</div>
-            <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
-            <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
-            <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
-            <div id="hrefFAQ" data-url="/faq">FAQ</div>
+        <!-- 햄버거 버튼 -->
+        <a class="menu-trigger" href="#">
+            <span class="hambergerBread"></span>
+            <span class="hambergerCenter"></span>
+            <span class="hambergerBread"></span>
+        </a>
+        <div id="hambergerContents" class="hambergerContents">
+            <div id="navContainer">
+                <div id="hrefHOME" data-url="/home">HOME</div>
+                <div id="hrefTIMETABLE" data-url="/timetable">TIMETABLE</div>
+                <div id="hrefBOOTH" data-url="/booth/list">BOOTH</div>
+                <div id="hrefCOMMENT" data-url="/comment">COMMENT</div>
+                <div id="hrefFAQ" data-url="/faq">FAQ</div>
+            </div>
+            <div id="piestaWebHost">
+                <a id="ohgam" href="https://www.instagram.com/gnu_5gam/">오감 총학생회</a>
+                &nbsp;X&nbsp;
+                <a id="mutsa" href="https://www.instagram.com/likelion_gnu/">멋쟁이사자처럼</a>
+            </div>
         </div>
-        <div id="piestaWebHost">
-            <a id="ohgam" href="https://www.instagram.com/gnu_5gam/">오감 총학생회</a>
-            &nbsp;X&nbsp;
-            <a id="mutsa" href="https://www.instagram.com/likelion_gnu/">멋쟁이사자처럼</a>
-        </div>
-    </div>
-        <!-- FAQ 섹션을 로고 바로 밑으로 배치 -->
+     </header>
         <section class="faq-section">
             <h2 class="FAQ">FAQ</h2>
             <div class="faq-item">
@@ -62,6 +63,24 @@
                 <button class="faq-question" onclick="toggleAnswer(3)">Q3. 부스 운영 시간은 어디에서 확인할 수 있나요?</button>
                 <div class="faq-answer" id="answer-3">
                     내용이 여기에 들어갑니다.
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleAnswer(4)">Q4. 부스 참여하려면 미리 예약해야 하나요?</button>
+                <div class="faq-answer" id="answer-4">
+                    개당 120g으로 1개로 충분합니다. 더욱 풍성한 개거품을 원하실 경우 1개 정도 더 이용하셔도 좋습니다!
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleAnswer(5)">Q5. 부스 참여하려면 미리 예약해야 하나요?</button>
+                <div class="faq-answer" id="answer-5">
+                    개당 120g으로 1개로 충분합니다. 더욱 풍성한 개거품을 원하실 경우 1개 정도 더 이용하셔도 좋습니다!
+                </div>
+            </div>
+            <div class="faq-item">
+                <button class="faq-question" onclick="toggleAnswer(6)">Q6. 부스 참여하려면 미리 예약해야 하나요?</button>
+                <div class="faq-answer" id="answer-6">
+                    개당 120g으로 1개로 충분합니다. 더욱 풍성한 개거품을 원하실 경우 1개 정도 더 이용하셔도 좋습니다!
                 </div>
             </div>
         </section>
