--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -428,12 +428,12 @@
     }
   
   .events-day {
-      display: grid;
-      grid-template-rows: repeat(20, 40px);
-      gap: 0px; /* 이벤트 사이 간격 제거 */
-      padding-left: 0px; /* 수직선과 내용 사이의 간격 제거 */
-      width: 100%; /* 부모 요소 너비와 맞춤 */
-      box-sizing: border-box; /* 패딩 포함 너비 계산 */
+      display: grid !important;
+      grid-template-rows: repeat(20, 40px)!important;
+      gap: 0px!important; /* 이벤트 사이 간격 제거 */
+      padding-left: 0px!important; /* 수직선과 내용 사이의 간격 제거 */
+      width: 100%!important; /* 부모 요소 너비와 맞춤 */
+      box-sizing: border-box!important; /* 패딩 포함 너비 계산 */
   }
   
   /* 첫 번째 요소가 아닌 모든 div에 상단 테두리 적용 */
@@ -442,22 +442,22 @@
   }
   
   .event {
-      flex-direction: column;
-      position: relative;
-      display: flex;
-      align-items: center; /* 내용 수직 중앙 정렬 */
-      justify-content: center; /* 내용 수평 중앙 정렬 */
-      padding: 10px; /* 내부 패딩 */
-      font-size: 10px; /* 폰트 크기 */
-      font-weight: bold; /* 폰트 두께 */
-      cursor: pointer; /* 커서 스타일 */
-      gap: 7px; /* 요소들 사이의 간격 */
-      width: 100%; /* 전체 너비 */
-      box-sizing:border-box ; /* 패딩 포함 너비 계산 */
+      flex-direction: column!important;
+      position: relative!important;
+      display: flex!important;
+      align-items: center!important; /* 내용 수직 중앙 정렬 */
+      justify-content: center!important; /* 내용 수평 중앙 정렬 */
+      padding: 10px!important; /* 내부 패딩 */
+      font-size: 10px!important; /* 폰트 크기 */
+      font-weight: bold!important; /* 폰트 두께 */
+      cursor: pointer!important; /* 커서 스타일 */
+      gap: 7px!important; /* 요소들 사이의 간격 */
+      width: 100%!important; /* 전체 너비 */
+      box-sizing:border-box !important; /* 패딩 포함 너비 계산 */
       /* border-radius: 10px; */
-      color: #000000;
-      text-align: center;
-      word-break: keep-all;  /* 어절 단위로 줄바꿈 */
+      color: #000000!important;
+      text-align: center!important;
+      word-break: keep-all!important;  /* 어절 단위로 줄바꿈 */
   }
 
   
