--- a/static/css/booth/map.css
+++ b/static/css/booth/map.css
@@ -29,6 +29,9 @@
   border: 0;
   box-shadow: 0px 1px 2px #888;
 }
+.wrap .info .title {
+  color: #000000; /* 원하는 색상 코드로 변경 */
+}
 .info .title {
   padding: 5px 0 0 10px;
   height: 30px;
@@ -50,13 +53,14 @@
   cursor: pointer;
 }
 .info .body {
-  position: relative;
-  overflow: hidden;
+  display: flex; /* 플렉스 박스 */
+  flex-direction: column; /* 세로 방향으로 정렬 */
+  align-items: center; /* 중앙 정렬 */
+  margin-top: 10px; /* 위쪽 여백 */
 }
 .info .desc {
-  position: relative;
-  margin: 13px 0 0 90px;
-  height: 75px;
+  text-align: center; /* 중앙 정렬 */
+    margin: 10px 0; /* 위 아래 여백 */
 }
 .desc .ellipsis {
   overflow: hidden;
